@@ -1,3 +1,6 @@
+2006-09-28 Ian Rutt
+ * Added append capability to output files. 
+
 2006-09-27 Ian Rutt
  * Fixed minor bug in nc2config
 
